--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.selectRoom {
+  border: 1px solid #eee;
+  width: 60%;
+  box-shadow: 0 2px 3px #ccc;
+  text-align: center;
+  background: darkgrey;
+  font-family: palatino;
+  padding: 10px;
 }
